master/projects/defaultproject/clusternetworkpolicyrules/artifacts/rauto-network-rule-639672351/cluster-wide-network-policy.yaml
apiVersion: 'cilium.io/v2'
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: 'clusterwide-xwing-allow'
spec:
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: alliance
    toPorts:
    - ports:
      - port: "80"
